# llavemx_mobile_bridge

./: .gitignore  README.md  pyproject.toml  tutor_plugin.py
llavemx_mobile_bridge/: __init__.py  apps.py  compat.py  services.py  urls.py  user_sync.py  views.py
llavemx_mobile_bridge/templates/llavemx_mobile_bridge/: callback.html
